# PDSD-CourseWork

./: CMakeLists.txt  SetOnList.cpp  SetOnList.h  SetOnNodeClass.cpp  SetOnNodeClass.h  SetOnNodes.cpp  SetOnNodes.h  SetOnSet.cpp  SetOnSet.h  SetOnString.cpp  SetOnString.h  SetOnVector.cpp  SetOnVector.h  additional.cpp  additional.h  application.cpp  main.cpp
