cmake_minimum_required(VERSION 3.24)
project(PDSD_CourseWork)

set(CMAKE_CXX_STANDARD 20)

add_executable(PDSD_CourseWork main.cpp SetOnNodeClass.h SetOnNodes.cpp SetOnNodeClass.cpp SetOnList.cpp SetOnSet.h SetOnSet.cpp SetOnVector.cpp SetOnVector.h SetOnString.cpp SetOnString.h additional.cpp additional.h)
